# OmniRouter

./: .gitignore  .replit  README.md  pyproject.toml  replit.md
omnicache/: destination.json
omnipacs_relay/: Dockerfile  README.md  __init__.py  config.py  forwarder.py  log_bus.py  main.py  multipart.py  omnipacs-relay.service  spool.py  tls_util.py  tokens.py  web.py
omnipacs_relay/static/: app.js  index.html  relay.css
omnipacs_relay/tests/: full_chain_e2e.py  smoke_e2e.py
omnirouter/: README.md  __init__.py  config.py  forwarders.py  log_bus.py  main.py  requirements.txt  router.py  service_windows.py  tls_util.py  web.py
omnirouter/static/: app.js  index.html  style.css
